--- a/app.json
+++ b/app.json
@@ -4,10 +4,10 @@
     "slug": "taskTracker",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./images/assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./images/assets/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -16,12 +16,14 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./images/assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.taskTracker"
     },
     "web": {
-      "favicon": "./assets/favicon.png"
-    }
+      "favicon": "./images/assets/favicon.png"
+    },
+    "scheme": "taskTracker"
   }
 }
