--- a/app.json
+++ b/app.json
@@ -16,13 +16,13 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./images/assets/adaptive-icon.png",
+        "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
       "package": "com.taskTracker"
     },
     "web": {
-      "favicon": "./images/assets/favicon.png"
+      "favicon": "./assets/assets/favicon.png"
     },
     "scheme": "taskTracker"
   }
