--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.16.0",
     "@react-navigation/native": "^6.0.2",
     "body-parser": "^1.20.2",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "expo": "~51.0.18",
     "expo-dev-client": "~4.0.21",
@@ -30,6 +31,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-calendar-picker": "^8.0.5",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-fab": "^1.0.18",
     "react-native-gesture-handler": "^2.18.1",
@@ -44,6 +46,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "@types/react-native-calendar-picker": "^8.0.0",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
     "react-test-renderer": "18.2.0",
