--- a/app.json
+++ b/app.json
@@ -22,8 +22,16 @@
       "package": "com.taskTracker"
     },
     "web": {
-      "favicon": "./assets/assets/favicon.png"
+      "favicon": "./assets/images/favicon.png"
     },
-    "scheme": "taskTracker"
+    "scheme": "taskTracker",
+    "plugins": [
+      [
+        "expo-font",
+        {
+          "fonts": ["./assets/fonts/SpaceMono-Regular.ttf"]
+        }
+      ]
+    ]
   }
 }
