--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@expo/vector-icons": "^14.0.2",
     "@mui/material": "^5.16.0",
     "@react-navigation/native": "^6.0.2",
+    "@reduxjs/toolkit": "^2.2.7",
+    "axios": "^1.7.3",
     "body-parser": "^1.20.2",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
@@ -40,8 +42,11 @@
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-svg": "^15.4.0",
+    "react-native-toast-message": "^2.2.0",
     "react-native-vector-icons": "^10.1.0",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
