--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "test": "jest"
+    "test": "jest --watchAll"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
@@ -54,9 +54,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@testing-library/react-native": "^12.5.3",
+    "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
     "@types/react-native-calendar-picker": "^8.0.0",
-    "jest": "^29.2.1",
+    "jest": "^29.7.0",
     "jest-expo": "~51.0.3",
     "react-test-renderer": "18.2.0",
     "typescript": "^5.1.3"
