--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,5 +3,5 @@
   "compilerOptions": {
     "strict": true
   },
-  "include": ["app", "**/*.ts", "**/*.tsx"],
+  "include": ["app", "**/*.ts", "**/*.tsx", "tests"],
 }
